# OSI

./: .gitignore  CONTRIBUTING.md  README.md
compliance/foundation-v0.1/: .gitignore  DATA_TESTS.md  README.md  SPEC.md  conformance.yaml  decisions.yaml  proposals.yaml  pyproject.toml
compliance/foundation-v0.1/adapters/: osi_python_adapter.py
compliance/foundation-v0.1/datasets/f_ambig/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_bridge/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_bridge_none/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_chain/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_composite/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_nopath/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_prelude/: description.md  schema.sql
compliance/foundation-v0.1/datasets/f_reflexive/: description.md  schema.sql
compliance/foundation-v0.1/results/: REPORT.md
compliance/foundation-v0.1/tests/: README.md
compliance/foundation-v0.1/tests/bridge/hard/t-014-mn-no-bridge/: gold.sql  metadata.yaml  model.yaml
compliance/foundation-v0.1/tests/bridge/hard/t-015-bridge-dedup/: gold.sql  metadata.yaml  model.yaml  query.json
compliance/foundation-v0.1/tests/bridge/hard/t-016-non-distributive-over-bridge-accepted/: gold.sql  metadata.yaml  model.yaml  query.json
compliance/foundation-v0.1/tests/bridge/hard/t-021-count-distinct-fanout/: gold.sql  metadata.yaml  model.yaml  (+1 more)
compliance/harness/: README.md  pyproject.toml
compliance/harness/src/harness/: __init__.py  __main__.py  backfill_features.py  db_manager.py  models.py  proposals_check.py  reporter.py  result_compare.py  runner.py
compliance/harness/src/harness/tests/: test_proposals_check.py  test_registry_yaml.py  test_reporter_proposals.py
impl/python/: .flake8  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  INFRA.md  Makefile  README.md  RUNNING_TESTS.md  SPEC.md  pyproject.toml
impl/python/conformance/: adapter.py  enabled_proposals.yaml
impl/python/conformance/tests/: test_adapter.py
impl/python/docs/: ALGEBRA_LAWS.md  ERRATA_ALIGNMENT.md  ERROR_CODES.md  JOIN_ALGEBRA.md  JOIN_SAFETY.md  MUTATION_BASELINE.md  README.md  TESTING_STRATEGY.md  mapping_bi_models_to_core_osi_abstractions.md
impl/python/examples/: README.md
impl/python/examples/models/: README.md  demo_orders.yaml  tpcds_thin.yaml
impl/python/examples/queries/: filtered_completed_orders.json  multi_metric_by_segment.json  revenue_by_region.json  tpcds_sales_by_category.json  tpcds_sales_vs_returns.json
impl/python/scripts/: run_all_tests.sh  run_mutation.sh  write_test_report.py
impl/python/specs/: README.md
impl/python/src/osi/: __init__.py  __main__.py  cli.py  config.py  errors.py
impl/python/src/osi/codegen/: README.md  __init__.py  cte_optimizer.py  dialect.py  transpiler.py  types.py
impl/python/src/osi/common/: README.md  __init__.py  identifiers.py  sql_expr.py  types.py  windows.py
impl/python/src/osi/diagnostics/: README.md  __init__.py  describe.py  error_catalog.py  explain.py  resolve.py
impl/python/src/osi/parsing/: README.md  __init__.py  _root.py  deferred.py  field_deps.py  foundation.py  function_whitelist.py  graph.py  models.py  namespace.py  parser.py  reserved_names.py  validation.py
impl/python/src/osi/planning/: README.md  __init__.py  classify.py  columns.py  home_grain.py  joins.py  metric_dispatch.py  metric_shape.py  plan.py  planner.py  planner_bridge.py  planner_composites.py  planner_context.py  planner_mn.py  planner_nested.py  planner_scalar.py  prefixes.py  preprocess.py  resolve.py  semantic_query.py  steps.py  windows.py
impl/python/tests/: conftest.py
impl/python/tests/benchmarks/: test_compile_perf.py
impl/python/tests/e2e/: README.md  conftest.py  test_cardinality_safety.py  test_duckdb_roundtrip.py  test_tpcds_foundation.py  tpcds_fixtures.py
impl/python/tests/golden/: README.md  test_plan_goldens.py  test_sql_goldens.py
impl/python/tests/golden/__snapshots__/: test_plan_goldens.ambr  test_sql_goldens.ambr
impl/python/tests/integration/: __init__.py
impl/python/tests/integration/readme/: __init__.py  test_readme_examples_drift.py
impl/python/tests/properties/: README.md  __init__.py  conftest.py  strategies.py  test_aggregate_idempotent.py  test_algebra_determinism.py  test_algebra_purity.py  test_algebra_totality.py  test_chasm_safety.py  test_enrich_preserves_rows.py  test_error_taxonomy.py  test_explosion_safety.py  test_filter_commute.py  test_frozensql_canonical.py  test_grain_closure.py  test_merge_associative.py  test_mn_rejection.py  test_planner_mn_rejection.py  test_project_idempotent.py  test_sql_determinism.py  test_window_roundtrip.py
impl/python/tests/unit/: __init__.py  test_appendix_c_drift.py  test_arch_invariants_drift.py  test_cli.py  test_common_identifiers.py  test_common_sql_expr.py  test_error_catalog.py  test_errors.py  test_every_exception_is_osierror.py  test_layer_readme_drift.py  test_operator_enum_sync.py  test_spec_section_refs_drift.py  test_synthetic_naming_invariants.py
impl/python/tests/unit/codegen/: test_cte_optimizer.py  test_dialect.py  test_transpiler.py
impl/python/tests/unit/diagnostics/: test_describe.py  test_error_catalog.py  test_explain.py  test_resolve.py
impl/python/tests/unit/parsing/: test_deferred.py  test_field_dependency_cycles.py  test_foundation_flags.py  test_function_whitelist.py  test_graph.py  test_models.py  test_namespace.py  test_parser.py  test_validation.py
impl/python/tests/unit/planning/: __init__.py  fixtures.py  test_classify.py  test_compound_aggregate_arguments.py  test_dimension_only.py  test_fan_trap_safety.py  test_field_staging.py  test_home_grain.py  test_joins.py  test_metric_shape.py  test_nested_aggregate.py  test_plan_types.py  test_planner.py  test_planner_bridge.py  test_planner_context.py  test_prefixes.py  test_preprocess.py  test_resolve.py  test_semantic_query.py  test_window_planner.py  test_windows.py
(+249 files in other folders)
