[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osi_compliance_foundation_v0_1"
version = "0.1.0"
description = "OSI Foundation v0.1 compliance test suite (osi_version 0.1)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OSI Foundation contributors" }]
license = { text = "Apache-2.0" }
dependencies = [
    "duckdb>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

# The compliance runner harness is vendored at compliance/harness/ inside
# this OSI repo. To install everything needed to run the suite:
#
#     pip install -e ../harness
#     pip install -e .
#
# Both packages are editable so iterating on either is one-step.

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*"]
exclude = ["tests*", "datasets*", "results*"]
