[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osi_compliance_harness"
version = "0.1.0"
description = "Shared runner / reporter / DB manager for the OSI compliance suite."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OSI Foundation contributors" }]
license = { text = "Apache-2.0" }
dependencies = [
    "duckdb>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["harness*"]
